2007-06-26  Luca Ferretti  <elle.uca@libero.it>

	* lib/ephy-stock-icons.h: use "document-page-setup" named icon for
	STOCK_PRINT_SETUP (now available on gnome-icon-theme trunk); add
	comments to explain icons origin (icon naming spec, custom,
	deprecated...)

2007-06-25  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (event_box_realize_cb):
	Make named drag-icons toolbar-sized like the others.
	Part of bug #450590.

2007-06-24  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (editor_create_item_from_name):
	Cleanups to my last commit.
	Fixes bug 450590 (Felix Riemann, Jaap Haitsma)

2007-06-24  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (editor_create_item_from_name):
	Add a workaround to take into account that Gtk{Radio,Toggle}Actions
	only set either the stock-id or the icon-name property depending on
	the image type. This makes it possible to display the icon of such
	actions in the toolbar editor. (bug #450590)

2007-06-22  Gabor Kelemen  <kelemeng@gnome.hu>

	* src/ephy-main.c: Use g_option_group_set_translation_domain to
	translate commandline options. Fixes bug #450146

2007-06-07  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* help/C/epiphany.xml:

	Modified first-time dialog when visiting a secure page, to mention
	the color and padlock icon in the address entry. 
	Patch by Jared Moore. Fixes bug #346243.

2007-06-16  Christian Persch  <chpe@gnome.org>

	* doc/Makefile.am:

	Add debugging.txt to EXTRA_DIST.

2007-06-14  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintSession.cpp:
	* embed/mozilla/GeckoPrintSession.h:

	Set the print as cancelled in the print settings too, see
	https://bugzilla.mozilla.org/show_bug.cgi?id=253926.

2007-06-10  Christian Persch  <chpe@gnome.org>

	* data/default-prefs-common.js:

	Disable PAPI too.
